--- a/KMS1/src/main/webapp/adminDashboard.html
+++ b/KMS1/src/main/webapp/adminDashboard.html
@@ -1,42 +1,68 @@
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+ <%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c"%>
+<%@ taglib uri="http://java.sun.com/jsp/jstl/fmt" prefix="fmt"%>
+<%@ page import="kms.model.teacher" %>
+<%
+  Object user = session.getAttribute("user");
+  String role = (String) session.getAttribute("role");
+  String adminName = "";
+
+  if ("admin".equals(role) && user instanceof teacher) {
+      teacher a = (teacher) user;
+      adminName = a.getTeacherName();
+  }
+%>
+
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Admin Dashboard</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-  <link rel="stylesheet" href="cs/adminDashboard.css">
+  <html lang="en">
+ <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Admin Dashboard</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <link rel="stylesheet" href="css/adminDashboard.css">
+  </head>
   
-</head>
 <body>
+
   <header>
-    <button class="navSidebar" onclick="toggleSidebar()"><i class="fa-solid fa-bars"></i></button>
+  	<button class="navSidebar" onclick="toggleSidebar()"><i class="fa-solid fa-bars"></i></button>
+  	
     <div class="logo">
-      <img src="images/LOGO-AL-KAUTHAR-EDUQIDS.png" alt="ALKAUTHAR EDUQIDS Logo">
+      <img src="image/LOGO-AL-KAUTHAR-EDUQIDS.png" alt="ALKAUTHAR EDUQIDS">
     </div>
   </header>
 
-  <nav class="sidebar" id="sidebar">
-    <div class="profile">
-      <img src="images/admin.jpg" alt="Admin Profile Photo">
-      <h3>Nurul Najah Binti Wahab</h3>
+  <div class="sidebar" id="sidebar">
+  <div class="profile">
+      <a href="viewAccount.jsp"><img src="images/admin.jpg" alt="Admin Profile Photo"></a>
+      <h3><%= adminName %></h3>
       <p>Administrator</p>
     </div>
     <a href="#">Dashboard</a>
-    <a href="#">Students</a>
+    <a href="ListStudentController">Students</a>
     <a href="#">Teachers</a>
     <a href="#">Accounts</a>
     <a href="#">Logout</a>
-  </nav>
+  </div>
+  
+  <div class="banner">
+  
+  </div>
 
-  <div class="banner"></div>
-
+  <!-- Dashboard Content -->
   <main class="dashboard" id="dashboard">
-    <section class="welcome">
-      <h2>Welcome back, Nurul Najah</h2>
-      <img src="images/design1.png" alt="Welcome Illustration">
-    </section>
+    <div class="welcome">
+      <div>
+        <h2>Welcome back, Nurul Najah</h2>
+        <p>Every child entrusted to your care is a trust from Allah. Through your kindness and wisdom, you are shaping the future of the ummah with love and barakah</p>
+      </div>
+      <div>
+        <img src="image/design1.png" >
+      </div>
+    </div>
 
     <div class="cards">
       <div class="card" style="border-color: #f491ba;">
@@ -60,22 +86,22 @@
     <div class="recent-activity">
       <h2>Recent Activity</h2>
       <div class="activity-box">
-        <ul class="activity-list">
-          <li>
-            <div class="activity-item">
-              <img src="images/parent.jpg" alt="Parents Profile">
-              <span><a href="#">@username</a> has submitted a request for account deletion</span>
-            </div>
-            <div class="btn-group">
-              <button class="delete-btn">Delete</button>
-              <button class="cancel-btn">Cancel</button>
-            </div>
-          </li>
+       <ul class="activity-list">
+        <li>
+        <div class="activity-item">
+        <img src="images/parent.jpg" alt="Parents Profile">
+        <span><a href=" ">@username</a> has submitted a request for account deletion</span>
+        </div>
+        <div class="btn-group">
+          <button class="delete-btn">Delete</button>
+          <button class="cancel-btn">Cancel</button>
+        </div>
         </ul>
       </div>
     </div>
   </main>
 
+  <!-- Script -->
   <script>
     function toggleSidebar() {
       const sidebar = document.getElementById("sidebar");
@@ -84,5 +110,8 @@
       dashboard.classList.toggle("shifted");
     }
   </script>
+
+
+
 </body>
 </html>
